# meshcore-llm-Lara

./: .gitignore  AUTO_REPLY_FINAL_STATUS.md  AUTO_REPLY_FINAL_STATUS.txt  AUTO_REPLY_USAGE_GUIDE.md  BOT_STATUS_REPORT.md  CODE_OF_CONDUCT.md  CONTEXT_COMPACT.md  CONTRIBUTING.md  LICENSE  OPENWEBUI_API_ANALYSIS.md  PROGRESS.md  README.md  STARTUP_GUIDE.md  auto_reply_priv.py  build_exe.bat  check_meshcore_api.py  demo_metadata.py  lara-cli-interface.code-workspace  lara_autoexe.spec  lara_cli_bridge.py  lara_config.example.yaml  lara_config.yaml  lara_main.py  meshcore_send.py  pyproject.toml  pytest.ini  requirements.txt  send_only_test.py  serial_proxy_logger.py  start_lara.bat  start_lara.ps1  test_ai_debug.py  test_node_to_node.py  test_send_priv_direct.py  test_sliding_window.py
.github/: copilot-instructions.md
.github/workflows/: python-app.yml
docs/: README.md  architecture.md  configuration.md  testing.md
docs/legacy/: test_metadata.py  test_metadata_guide.py
docs/reports/: AUTO_REPLY_TEST_SUMMARY.md  FINAL_VERIFICATION_REPORT.md  IMPROVEMENTS_SUMMARY.md  METADATA_TESZT.md  NODE_TO_NODE_TEST_SUMMARY.md  PERSISTENT_CONNECTION_SUMMARY.md  PRIV_MESSAGE_SOLUTION.md  PROGRESS.md  QA_TEST_REPORT.md
tests/: test_config.py  test_openwebui.py
